# synthesis

./: .gitignore  Cargo.toml  README.md  plot_ratings.py  process.py
base65536/: Cargo.toml
base65536/src/: lib.rs
export/: Cargo.toml
export/src/: main.rs
invest/: Cargo.toml
invest/src/: main.rs
plunder/: Cargo.toml
plunder/src/: main.rs
ragz/: Cargo.toml
ragz/src/: data.rs  env.rs  game.rs  lib.rs  mcts.rs  prelude.rs  runner.rs  utils.rs  vanilla_mcts.rs
ragz/src/policies/: cache.rs  mod.rs  rollout.rs  storage.rs  traits.rs
riches/: Cargo.toml
riches/src/: main.rs
riches/src/envs/: breakthrough.rs  connect4.rs  mod.rs
riches/src/games/: connect4.rs  mod.rs  uttt.rs
riches/src/policy_impls/: connect4.rs  mod.rs  uttt.rs
slimnn/: Cargo.toml
slimnn/src/: activations.rs  conv.rs  lib.rs  linear.rs  loading.rs
src/: base65536.rs  connect4.rs  data.rs  env.rs  main.rs  mcts.rs  model.rs  runner.rs  utils.rs
src/envs/: breakthrough.rs  connect4.rs  env.rs  mod.rs  uttt.rs
src/policies/: impls.rs  mod.rs  storage.rs  traits.rs
src/policy_impls/: cache.rs  connect4.rs  mod.rs  uttt.rs
src/slimnn/: activations.rs  conv.rs  mod.rs
study-connect4/: Cargo.toml
study-connect4/src/: connect4.rs  main.rs  policies.rs
study-ginseng-paisho/: Cargo.toml
study-ginseng-paisho/src/: ginseng.rs  main.rs  policies.rs
synthesis/: Cargo.toml
synthesis/src/: alpha_zero.rs  config.rs  data.rs  evaluator.rs  game.rs  learner.rs  lib.rs  mcts.rs  prelude.rs  runner.rs  utils.rs
synthesis/src/policies/: cache.rs  mod.rs  rollout.rs  traits.rs
