[package]
name = "export"
version = "0.1.0"
authors = ["Corey Lowman <clowman1993@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base65536 = { path = "../base65536" }
synthesis = { path = "../synthesis" }
tch = "0.4.1"