[package]
name = "study-connect4"
version = "0.1.0"
authors = ["Corey Lowman <clowman1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synthesis = { path = "../synthesis" }
slimnn = { path = "../slimnn" }
tch = "0.4.1"
rand = "0.8.3"
rand_distr = "0.4.0"