[package]
name = "synthesis"
version = "0.1.0"
authors = ["Corey Lowman <clowman1993@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.4.1"
rand = "0.8.3"
ordered-float = "2.5.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
chrono = "0.4.3"
log = "0.4.14"
env_logger = "0.8.3"
torch-sys = "0.4.1"
rand_distr = "0.4.0"
indicatif = "0.16.2"
slimnn = { path = "../slimnn" }